Fixed button contrast hopefully

--- a/style.css
+++ b/style.css
@@ -682,7 +682,7 @@ a:active {
 }
 
 .button {
-  background-color: rgb(255, 255, 255); 
+  background-color: rgb(25, 25, 25); 
   border-width: 1px;
   color: white;
   padding: 3px 3px;
